[tool.poetry]
name = "send-minecraft-notifications"
version = "0.1.0"
description = ""
authors = ["somakai_sumasi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
watchdog = "^4.0.0"
python-dotenv = "^1.0.1"
isort = "^5.13.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
